--- a/gui/login.ui
+++ b/gui/login.ui
@@ -18,9 +18,9 @@
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>10</y>
+      <y>20</y>
       <width>251</width>
-      <height>101</height>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -125,6 +125,27 @@
     </property>
     <property name="text">
      <string>Регистрация</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="errorLabel">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>80</y>
+      <width>511</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
