--- a/gui/change .ui
+++ b/gui/change .ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>446</width>
-    <height>853</height>
+    <height>765</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -39,16 +39,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="title">
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>(Название )</string>
-       </property>
-      </widget>
+      <widget class="QLineEdit" name="title_redact"/>
      </item>
      <item>
       <widget class="QLabel" name="time">
