--- a/gui/newone.ui
+++ b/gui/newone.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>446</width>
-    <height>853</height>
+    <width>440</width>
+    <height>831</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -52,6 +52,50 @@
      </item>
      <item>
       <widget class="QLineEdit" name="title_row"/>
+     </item>
+     <item>
+      <widget class="QLabel" name="title_error">
+       <property name="palette">
+        <palette>
+         <active>
+          <colorrole role="WindowText">
+           <brush brushstyle="SolidPattern">
+            <color alpha="255">
+             <red>255</red>
+             <green>40</green>
+             <blue>3</blue>
+            </color>
+           </brush>
+          </colorrole>
+         </active>
+         <inactive>
+          <colorrole role="WindowText">
+           <brush brushstyle="SolidPattern">
+            <color alpha="255">
+             <red>255</red>
+             <green>40</green>
+             <blue>3</blue>
+            </color>
+           </brush>
+          </colorrole>
+         </inactive>
+         <disabled>
+          <colorrole role="WindowText">
+           <brush brushstyle="SolidPattern">
+            <color alpha="255">
+             <red>120</red>
+             <green>120</green>
+             <blue>120</blue>
+            </color>
+           </brush>
+          </colorrole>
+         </disabled>
+        </palette>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QLabel" name="time">
@@ -116,7 +160,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPlainTextEdit" name="plans"/>
+      <widget class="QLineEdit" name="plans"/>
      </item>
      <item>
       <widget class="QLabel" name="importace">
@@ -131,45 +175,48 @@
       </widget>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
+      <widget class="QComboBox" name="combo_prior">
        <item>
-        <widget class="QRadioButton" name="one">
-         <property name="text">
-          <string>1</string>
-         </property>
-        </widget>
+        <property name="text">
+         <string>1</string>
+        </property>
        </item>
        <item>
-        <widget class="QRadioButton" name="two">
-         <property name="text">
-          <string>2</string>
-         </property>
-        </widget>
+        <property name="text">
+         <string>2</string>
+        </property>
        </item>
        <item>
-        <widget class="QRadioButton" name="third">
-         <property name="text">
-          <string>3</string>
-         </property>
-        </widget>
+        <property name="text">
+         <string>3</string>
+        </property>
        </item>
        <item>
-        <widget class="QRadioButton" name="four">
-         <property name="text">
-          <string>4</string>
-         </property>
-        </widget>
+        <property name="text">
+         <string>4</string>
+        </property>
        </item>
        <item>
-        <widget class="QRadioButton" name="five">
-         <property name="text">
-          <string>5</string>
-         </property>
-        </widget>
+        <property name="text">
+         <string>5</string>
+        </property>
        </item>
-      </layout>
+      </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QPushButton" name="okey">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>720</y>
+      <width>161</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Сохранить</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -177,7 +224,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>446</width>
+     <width>440</width>
      <height>21</height>
     </rect>
    </property>
